<resources>
    <string name="app_name">OBC</string>
    <string name="app_name_sigla">White Martins - UC20</string>
    <string name="app_full_name">On Board Computer</string>
    <string name="confirm_travel_data">CONFIRMA DADOS DA VIAGEM</string>
    <string name="confirm_travel_client">CONFIRMA DADOS DO CLIENTE</string>
    <string name="num_travel">NÚMERO DA VIAGEM:</string>
    <string name="travel_date">DATA VIAGEM:</string>
    <string name="num_vehicle">NUM. VEÍCULO:</string>
    <string name="unit">UNIDADE:</string>
    <string name="rout_num">NUM. ROTA:</string>
    <string name="driver">MOTORISTA:</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="cancel">CANCELAR VIAGEM</string>
    <string name="nCliente">Nº CLIENTE:</string>
    <string name="client_list_title">Lista de Clientes</string>
    <string name="product_list_title">Lista de Produtos</string>
    <string name="customer_service">ATENDIMENTO AO CLIENTE</string>
    <string name="transfers_stock">TRANSFERE ESTOQUE</string>
    <string name="reporting">EMISSÃO DE RELATÓRIOS</string>
    <string name="end_travel">FIM DA VIAGEM</string>
    <string name="settings">CONFIGURAÇÃO</string>
    <string name="remake_travel">REFAZER VIAGEM</string>
    <string name="about">Sobre o Aplicativo</string>
    <string name="voltar">voltar</string>
    <string name="exit_confirm_travel_msg">OS DADOS DA VIAGEM SERÃO PERDIDOS! Confirma?</string>
    <string name="exit_confirm_clean_table_data">APAGANDO DADOS DAS TABELAS</string>
    <string name="send_data_printer">AGUARDE A IMPRESSÃO...</string>
    <string name="send_data_printer_ok">DADOS ENVIADOS</string>
    <string name="send_data_printer_fail">ERRO AO ENVIAR OS DADOS</string>
    <string name="bar_code_msg">CODIDO VERIFICADO COM SUCESSO</string>
    <string name="empty_data">PREENCHA OS DADOS</string>
    <string name="empty_product_code_msg">PREENCHA OU SELECIONE UM CODIGO DE PRODUTO</string>
    <string name="invalid_product_code_msg">PRODUTO INEXISTENTE</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="client_stop">PARADA DO CLIENTE</string>
    <string name="client_number">N° DO CLIENTE:</string>
    <string name="next_stop">PRÓXIMA PARADA</string>
    <string name="next">PRÓXIMA</string>
    <string name="list">LISTAR</string>
    <string name="next_stop_not_defined">NÃO DEFINIDA</string>
    <string name="clients_list">LISTA DE CLIENTES</string>
    <string name="pacient_name">NOME</string>
    <string name="search">BUSCAR</string>
    <string name="system_settings">CONFIGURAÇÃO DO SISTEMA</string>
    <string name="system_version">Versão 4.90</string>
    <string name="battery_status">Status da Bateria</string>
    <string name="online_recover_client">RECUPERAÇÃO ON LINE DE CLIENTE</string>
    <string name="online_recover_client_message">Favor informar o código do cliente que deseja recuperar ou atualizar na viagem!</string>
    <string name="client_confirm">CONFIRMAÇÃO DE CLIENTE</string>
    <string name="client_name">NOME:</string>
    <string name="client_address">ENDEREÇO:</string>
    <string name="client_cnpj_cpf">CNPJ/CPF:</string>
    <string name="client_sell">VENDA</string>
    <string name="client_application">APLICAÇÃO</string>
    <string name="client_gathering">RECOLHIMENTO</string>
    <string name="client_change_order">ORDEM DE TROCA(BAIXA S8)</string>
    <string name="client_future_delivery">REMESSA FATURA ENTREGA</string>
    <string name="client_billing_shipment">REMESSA FATURAMENTO HC</string>
    <string name="client_shipping_sale">REMESSA VENDA A ORDEM</string>
    <string name="client_shipping_service">REMESSA PRESTAÇÃO DE SERVIÇO</string>
    <string name="client_consult_invoice">CONSULTA/CANCELA NOTA FISCAL</string>
    <string name="unimed_fake">52288641 - UNIMED RIO COOPERAT</string>
    <string name="menu_config_system">Configurar Sistema</string>
    <string name="menu_recover_client">Recuperar Cliente</string>
    <string name="signup_client">Cadastrar novo Cliente</string>
    <string name="menu_travel_data">Dados da Viagem</string>
    <string name="title_activity_detalhe_cliente">DetalheClienteActivity</string>
    <string name="order_sell">PEDIDO - VENDA</string>
    <string name="add_item">ADICIONAR ITEM AO PEDIDO</string>
    <string name="order_sell_number_product">N° PRODUTO</string>
    <string name="order_sell_order">Nº DO PEDIDO</string>
    <string name="order_sell_list">LISTAR</string>
    <string name="order_sell_qtd_itens">QUANTIDADE DE ITENS:</string>
    <string name="saldo">Saldo: 16</string>
    <string name="price">Preço: 100,00</string>
    <string name="frete">Frete: 25843</string>
    <string name="certificado">Certificado: 0.0000</string>
    <string name="finish_sell">FINALIZAR PEDIDO</string>
    <string name="cylinder">CILINDRO:</string>
    <string name="lot">LOTE:</string>
    <string name="finish_order">FINALIZAR PEDIDO</string>
    <string name="total_order">TOTAL DO PEDIDO:</string>
    <string name="money">DINHEIRO:</string>
    <string name="check">CHEQUE:</string>
    <string name="check_number">NUM. CHEQUE:</string>
    <string name="invoice">FATURA:</string>
    <string name="title_activity_send_invoice">SendInvoiceActivity</string>
    <string name="send_invoice_warning_1">Atenção! Aguarde a finalização do processo de emissão da NFe</string>
    <string name="time_generator">00:00</string>
    <string name="status_invoice">Status: Criando Nota Fiscal</string>
    <string name="send_invoice_warning_2">Atenção! Não é permitido reiniciar o coletor (BOOT) até que o CEC seja impresso</string>
    <string name="southpaw_invoice_client">Canhoto de Entrega ao Cliente</string>
    <string name="client">Cliente</string>
    <string name="nfe_serie">Nfe/Série:</string>
    <string name="operation">Operação:</string>
    <string name="access_key">Chave Acesso:</string>
    <string name="protocol_user">Protocolo de Autorização de Uso:</string>
    <string name="item">Item</string>
    <string name="volume">Volume</string>
    <string name="total_value_order">Valor Total da Nota Fiscal:</string>
    <string name="client_operation">VENDA</string>
    <string name="acess_key_number">3084327984734183948184190171274104</string>
    <string name="authorization_protocol">797232374923</string>
    <string name="save_signature">CONFIRMAR</string>
    <string name="clear">LIMPAR</string>
    <string name="name">Nome</string>
    <string name="verify_bar_code">VERIFICAR CODIGO DE BARRAS</string>
    <string name="action_settings">Settings</string>
    <string name="load">Load</string>
    <string name="no_directory">No files or directories</string>
    <string name="back">Back</string>
    <string name="browse">Browse</string>
    <string name="filename">filename</string>
    <string name="current_folder_label">Current Folder:</string>
    <string name="title_activity_file_explorer">FileExplorerActivity</string>
    <string name="close_label">Close</string>
    <string name="version_code_label"> version code: </string>
    <string name="version_name_label"> version code: </string>
    <string name="about_company"> Company: Datamax-ONeil</string>
    <string name="about_copyright"> Copyright: 2011</string>
    <string name="about_decription_text"> This application prints sample label file to a Datamax-ONeil printer.</string>
    <string name="app_description">Enter D-O application description here..</string>
    <string name="image_desc">D-O Logo</string>
    <string name="conn_type">Connection Type:</string>
    <string name="config">Config</string>
    <string name="connection">Select a communication method:</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="connection_not_configured">Connection settings not configured. Please configure connection settings.</string>
    <string name="print_items">Select an item to print:</string>
    <string name="query_items">Select an item to query:</string>
    <string name="printer_mode">Select a printer language:</string>
    <string name="print">Print</string>
    <string name="perform_task">Select what to do:</string>
    <string name="query">Query</string>
    <string name="printHeadWidth">PrintHead Width:</string>
    <string-array name="printHeadWidth_array">
        <item>384 (2 in.)</item>
        <item>576 (3 in.)</item>
        <item>832 (4 in.)</item>
    </string-array>
    <string-array name="connection_array">
        <item>Bluetooth</item>
        <item>TCP/IP</item>
    </string-array>
    <string-array name="printer_mode_array">
        <item>EZ</item>
        <item>LP</item>
        <item>DPL</item>
        <item>ExPCL_LP</item>
        <item>ExPCL_PP</item>
    </string-array>
    <string-array name="print_list_EZ">
        <item>3-inch Sample Receipt</item>
        <item>4-inch Sample Receipt</item>
        <item>Barcode Sample</item>
    </string-array>
    <string-array name="print_list_LP">
        <item>3-inch Sample Receipt</item>
        <item>4-inch Sample Receipt</item>
        <item>Image Sample</item>
    </string-array>
    <string-array name="print_list_DPL">
        <item>Text Sample</item>
        <item>Incrementing Sample</item>
        <item>Barcodes Sample</item>
        <item>Graphics Sample</item>
        <item>Image Sample</item>
    </string-array>
    <string-array name="print_list_ExPCL_LP">
        <item>Text Sample</item>
        <item>Barcodes Sample</item>
        <item>Graphics Sample</item>
    </string-array>
    <string-array name="print_list_ExPCL_PP">
        <item>Text Sample</item>
        <item>Barcodes Sample</item>
        <item>Rectangles Sample</item>
    </string-array>
    <string-array name="query_list_Legacy">
        <item>Avalanche Settings</item>
        <item>Battery Condition</item>
        <item>Bluetooth Config</item>
        <item>Font List</item>
        <item>Format List</item>
        <item>General Config</item>
        <item>General Status</item>
        <item>Graphics List</item>
        <item>IrDA Config</item>
        <item>Label Config</item>
        <item>Magnetic Config</item>
        <item>Magnetic Card Data</item>
        <item>Manufacturing Date</item>
        <item>Memory Status</item>
        <item>Printer Options</item>
        <item>PrintHead Status</item>
        <item>Serial Number</item>
        <item>SmartCard Reader Config</item>
        <item>Serial Port Config</item>
        <item>TCP/IP Status</item>
        <item>Update Data</item>
        <item>Version Information</item>
    </string-array>
    <string-array name="query_list_DPL">
        <item>Printer Information</item>
        <item>Files and Internal Fonts</item>
        <item>Media Label</item>
        <item>Print Control Settings</item>
        <item>System Settings</item>
        <item>Sensor Calibration</item>
        <item>Miscellaneous</item>
        <item>Serial Port Config</item>
        <item>Auto Update Settings</item>
        <item>Avalanche Enabler Settings</item>
        <item>Bluetooth Config</item>
        <item>Network General Settings</item>
        <item>Network Wireless Settings</item>
        <item>Printer Status</item>
    </string-array>
    <string-array name="query_list_ExPCL">
        <item>Battery Condition</item>
        <item>Bluetooth Config</item>
        <item>General Status</item>
        <item>Magnetic Card Data</item>
        <item>Memory Status</item>
        <item>Print Head Status</item>
        <item>Version Information</item>
    </string-array>
    <string name="title_activity_connection_settings">ConnectionSettingsActivity</string>
    <string name="Save_Done_Button">Save</string>
    <string name="enter_mac">Please enter MAC Address:</string>
    <string name="mac_hint">eg. AB:CD:EF:11:22:33 or ABCDEF112233</string>
    <string name="enter_ip">Please enter IP Address of printer:</string>
    <string name="ip_hint">eg. 192.168.99.1</string>
</resources>