<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_config_system"
        android:title="@string/menu_config_system"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_travel_data"
        android:title="@string/menu_travel_data"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_recover_client"
        android:title="@string/menu_recover_client"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/signup_client"
        android:title="@string/signup_client"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>