<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.whitemartins.obc.SouthpawInvoiceActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/southpaw_invoice_client"
            android:textAlignment="center"
            android:textColor="@color/appTextColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/nfe_serie"
            android:textColor="@color/appTextColor" />

        <EditText
            android:id="@+id/nfe_serie"
            android:textColor="@color/appTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unimed_fake"
            android:layout_marginTop="3dp"
            android:enabled="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/operation"
            android:textColor="@color/appTextColor" />

        <EditText
            android:id="@+id/operarion"
            android:layout_width="match_parent"
            android:textColor="@color/appTextColor"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/client_operation"
            android:enabled="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/access_key"
            android:textColor="@color/appTextColor" />

        <EditText
            android:id="@+id/access_key"
            android:layout_width="match_parent"
            android:textColor="@color/appTextColor"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/acess_key_number"
            android:enabled="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/protocol_user"
            android:textColor="@color/appTextColor" />

        <EditText
            android:id="@+id/protocol_user"
            android:layout_width="match_parent"
            android:textColor="@color/appTextColor"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/authorization_protocol"
            android:enabled="false" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:enabled="false"
                android:text="@string/item"
                android:textColor="@color/appTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:enabled="false"
                android:text="/"
                android:textColor="@color/appTextColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:enabled="false"
                android:text="@string/volume"
                android:textColor="@color/appTextColor" />
        </GridLayout>

        <ListView
            android:id="@+id/item_list"
            android:layout_width="wrap_content"
            android:layout_height="114dp"></ListView>

        <Button
            android:id="@+id/southpaw_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/appColor"
            android:text="@string/confirm"
            android:textColor="@color/appTextColorWithBackground" />

    </LinearLayout>
</ScrollView>